--- a/dancefloor.html
+++ b/dancefloor.html
@@ -3,14 +3,22 @@
   <head>
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- <link rel = "stylesheet" href='csshake.min.css'> -->
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/ryuDancer.js"></script>
+    <script src="src/doraemonDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="lineupButton">line up!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="ryuDancer">add a ryu dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="doraemonDancer">add a doraemon dancer</a>
+    </div>
+
     <script src="src/init.js"></script>
   </body>
 </html>
