Started working on collisions

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,6 +14,7 @@
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="lineupButton">line up!</a>
+      <a href="#" class="checkPosition" >check Position</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ryuDancer">add a ryu dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="doraemonDancer">add a doraemon dancer</a>
